fixed layout on mobile

--- a/style.scss
+++ b/style.scss
@@ -100,7 +100,12 @@ output {
     grid-column: 1 / 3;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start;
+    align-items: center;
+    // flex-direction: column;
+
+    @media only screen and (width < 450px) {
+        flex-direction: column;
+    }
 }
 
 .multi-space>span {
